# hackathon

./: .gitignore  README.md  pitch_ideas.MD
perception/: pyproject.toml
perception/captures/: camera_poses.json  unity_scene.json
perception/scripts/: run_pipeline.py
perception/src/: planned_placements.json
perception/src/captures/: camera_poses.json  unity_scene.json
perception/src/perception/: __init__.py  alignment.py  arithmetic.py  capture.py  classify.py  classify_image.py  cli.py  demo_placement.py  digital_twin.py  export.py  export_unity.py  markers.py  placement.py  project_cluster.py  registration.py  reporting.py  segmentation.py  site_layout.json  site_layout.py  topdown.py  viewer.py  visualize_scene.py  volume.py
perception/tests/: test_arithmetic.py  test_classify_and_volume.py  test_classify_multiview.py  test_digital_twin.py  test_smoke.py  test_topdown.py  test_visualize_scene.py  test_volume.py
segmentation_pipeline/: cam_test.py  map_class.py  pwd.txt  rough_scan.py  site_config.py  test.py  vlm_classifier.py  warehouse.py  waypoint_generator.py
ui/: README.md  docker-compose.yml
ui/backend/: .env.example  Dockerfile  requirements.txt
ui/backend/app/: config.py  geo.py  main.py  models.py  schemas.py
ui/backend/app/routers/: flight_captures.py  flights.py  projects.py  rois.py  stockpiles.py  surveys.py
ui/backend/app/services/: __init__.py  flight_planner.py  mapping.py  ur5.py
ui/database/migrations/: 001_initial.sql
ui/frontend/: index.html  package-lock.json  package.json
ui/frontend/src/: App.tsx  index.css  main.tsx
(+16 files in other folders)
