[project]
name = "perception"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "open3d>=0.18,<0.19",
    "pyrealsense2>=2.55",
    "numpy>=1.24,<2.0",
    "opencv-contrib-python>=4.11.0.86",
    "open-clip-torch>=3.3.0",
]

[project.scripts]
stockpile = "perception.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perception"]

[dependency-groups]
dev = ["pytest>=8.0"]
